testsuite/tests/grammar/invalid_list/test.out
== invalid-astlist.lkt ==
invalid-astlist.lkt:6:7: error: 2 type arguments expected, got 3
6 |       ASTList[FooNode, Example, Example]+(Example("example"))
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== invalid-element-type.lkt ==
invalid-element-type.lkt:8:9: error: Invalid list type for List parser: sub-parser produces Num nodes while Example.list accepts only Example nodes
8 |         ASTList[FooNode, Example]*(num)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== invalid-list-cls.lkt ==
invalid-list-cls.lkt:5:29: error: Bad generic type name: only ASTList is valid in this context
5 |     @main_rule main_rule <- NoSuchGeneric[Example]+(Example("example"))
  |                             ^^^^^^^^^^^^^


== non-list-cls.lkt ==
non-list-cls.lkt:6:29: error: Invalid list type for List parser: ListNode. Not a list type
6 |     @main_rule main_rule <- ListNode+(num)
  |                             ^^^^^^^^^^^^^^


== token-element.lkt ==
token-element.lkt:5:38: error: List parsers only accept subparsers that yield AST nodes (Token provided here)
5 |     @main_rule main_rule <- ListNode(list+(@Number))
  |                                      ^^^^^^^^^^^^^^


lkt_compile: Done
